--- a/main.html
+++ b/main.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<h1 id="f1">Flowers Photos</h1>
+	<p>Flowers are introduced as the reproductive part of a plant. They are not only involved in reproduction but are also a source of food for other living organisms. They are a rich source of nectar.</p>
+	<h1 id="f2">Roses Pictures</h1>
+	<p>Rose flowers' size ranges from tiny miniatures 1.25 cm (0.5 inch) in diameter to hybrid flowers measuring more than 17.5 cm (7 inches) across. The rose plant's fleshy, sometimes edible, berrylike “fruit” (actually the floral cup) is known as a hip and usually ranges from red to orange in colour.</p>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
