--- a/main.html
+++ b/main.html
@@ -7,11 +7,20 @@
 </head>
 
 <body>
-	<h1 id="f1">Flowers Photos</h1>
-	<p>Flowers are introduced as the reproductive part of a plant. They are not only involved in reproduction but are also a source of food for other living organisms. They are a rich source of nectar.</p>
-	<h1 id="f2">Roses Pictures</h1>
-	<p>Rose flowers' size ranges from tiny miniatures 1.25 cm (0.5 inch) in diameter to hybrid flowers measuring more than 17.5 cm (7 inches) across. The rose plant's fleshy, sometimes edible, berrylike “fruit” (actually the floral cup) is known as a hip and usually ranges from red to orange in colour.</p>
-	<!-- the entire body must be written by student -->
+	<style>
+		#f1,#f2{
+			background:yellow;
+			text-align:center;
+		}
+	</style>
+	 <div id="flowers-photos">
+        <h1 id="f1">Flowers photos</h1>
+        <p>Flowers are a beautiful part of nature, often appreciated for their vibrant colors and pleasing scents. They play an essential role in pollination and are a popular choice for gardens and floral arrangements.</p>
+    </div>
+    <div id="roses-pictures">
+        <h1 id="f2">Roses pictures</h1>
+        <p>Roses are one of the most popular and iconic flowers, known for their stunning beauty and sweet fragrance. They come in a variety of colors, each symbolizing different sentiments and emotions.</p>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
